sao: Iteration on Fix widget / icons / buttons alignment in theme [CUSTOM] (#91)

--- a/sao/theme/coog/elements/inputs.less
+++ b/sao/theme/coog/elements/inputs.less
@@ -36,7 +36,10 @@
 
 .input-group-sm>.form-control, .input-group-sm>.input-group-addon {
     font-size:          @input-font-size;
-    height:             @input-height-less:          @input-btn-size!important;
+    height:             @input-height-small;
+}
+.input-group-sm>.input-group-btn>.btn {
+    font-size:          @input-btn-size!important;
     margin-left:        unset!important;
     .glyphicon {
         color:          @input-icons-color;
